--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 .nav-buttons {
   margin-left: 60%;
@@ -37,7 +37,7 @@ h6 {
 }
 
 .navbar {
-  font-size: 16px;
+  font-size: 17px;
   padding-top: 2rem !important;
   padding-bottom: 2rem !important;
   top: 0;
@@ -115,21 +115,17 @@ h6 {
   margin-bottom: 30px;
 }
 
-#home button {
-  background-color: coral;
-  color: #fff;
-  padding: 10px 20px;
+ 
+ button{
+  background-color: orangered;
+  width: 150px;
+  border-radius: 7px;
+  color: white;
+  font-weight: bold;
+  height: 45px;
   border: none;
-  font-size: 1.2rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  white-space: nowrap;
-  width: fit-content;
-}
-
-#home button:hover {
-  background-color: #ff6b6b;
-}
+ }
+ 
 
 /* brands----------------------------- */
 
@@ -159,16 +155,7 @@ h6 {
 #new .one .details:hover {
   background-color: goldenrod;
 }
-button {
-  background-color: #000;
-  color: white;
-  border: none;
-  height: 40px;
-  width: 100px;
-}
-button:hover {
-  background-color: coral;
-}
+
 #new .one:nth-child(1) .details {
   display: flex;
   justify-content: center;
@@ -587,7 +574,7 @@ th:last-child {
 }
 
 /* shop and featured============ */
-
+ 
 /* Default styles for the sidebar */
 #search-sidebar {
   background-color: #f0f0f0;
